projects/voice/piper/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: piper
  name: piper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: piper
  template:
    metadata:
      labels:
        app: piper
    spec:
      containers:
        - image: lscr.io/linuxserver/piper:latest
          name: piper
          ports:
            - name: http
              containerPort: 10200
              protocol: TCP
          resources: {}
      restartPolicy: Always
