projects/voice/piper/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: piper
  name: piper
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app: piper
